Kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-deployment
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: todo-app

  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
        - name: todo-app-container
          image: mahmoudhassan9/todo-python-app
          ports:
            - containerPort: 5000  

          resources:   
            limits:
              cpu: "1"   
              memory: "512Mi"   
            requests:
              cpu: "0.5"   
              memory: "128Mi"
