Kubernetes/deployment_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
spec:
  selector:
    app: todo-app
  type: LoadBalancer
  ports:
      - port: 80 
        targetPort: 5000
